--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- index.html -->
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v7.11.2/mapbox-gl.css' rel='stylesheet' />
     <title>React App</title>
   </head>
   <body>
