--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <!-- index.html -->
+    <!-- react-map-gl style -->
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v7.11.2/mapbox-gl.css' rel='stylesheet' />
-    <title>React App</title>
+    <!-- material-ui styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+
+    <title>PGH Food Truck</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
